Bug fade in animation doesnt get triggered so not visible

--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -7,6 +7,7 @@ $primary-text: #fff;
 $secondary-text: rgb(158, 158, 158);
 $third-text: rgb(74, 74, 74);
 $accend-color: #39BF00;
+$endblock: rgb(28, 28, 28);
 $navbar-color: rgba(0, 0, 0, 0.404);
 
 * {
@@ -23,19 +24,6 @@ html {
 body {
     background-color: $background-color;
     font-family: $font-family;
-}
-
-section {
-    max-width: 100%;
-    height: 100vh;
-    overflow-y: auto;
-    overflow-x: hidden;
-    perspective: 10px;
-    padding-top: 10cm;
-    display: flex;
-    justify-content: center;
-    flex-flow: row;
-    align-items: center;
 }
 
 /* navbar */
@@ -308,18 +296,37 @@ img {
 
 /* differend index part pages */
 
+section {
+    max-width: 100%;
+    height: 100vh;
+    perspective: 10px;
+    justify-content: center;
+    align-items: center;
+    scroll-snap-align: center;
+    color: $primary-text;
+    padding-top: 5cm;
+    scroll-snap-align: start;
+}
+
+.container {
+    scroll-snap-type: y proximity;
+    overflow-y: scroll;
+    height: 100vh;
+}
+
 .about-part {
-    background: #ff00c8;
+    
 }
 
 .club-part {
-    background: #00ff0d;
+    
 }
 
 .projects-part {
-    background: rgb(0, 8, 255);
+    
 }
 
 .endblock-part {
-    background: #ff1100;
+    height: 25vh;
+    background-color: $endblock;
 }
